Add pseudo inline editing

--- a/vvpages/templates/vvpages/vues/templates.html
+++ b/vvpages/templates/vvpages/vues/templates.html
@@ -1,5 +1,5 @@
-<div class="row" v-show="isActive('content')">
+<div class="row" v-show="isActive('pageContent')">
 	<div class="col-xs-12">
-		<div id="content" v-html="content"></div>
+		<div id="content" v-html="pageContent"></div>
 	</div>
 </div>
