--- a/vvpages/templates/admin/vvpages/page/change_form.html
+++ b/vvpages/templates/admin/vvpages/page/change_form.html
@@ -44,7 +44,9 @@
 <div>
 {% if is_popup %}<input type="hidden" name="{{ is_popup_var }}" value="1" />{% endif %}
 {% if to_field %}<input type="hidden" name="{{ to_field_var }}" value="{{ to_field }}" />{% endif %}
-{% if save_on_top %}{% block submit_buttons_top %}{% submit_row %}{% endblock %}{% endif %}
+{% if save_on_top %}{% block submit_buttons_top %}
+	{% submit_row %}
+{% endblock %}{% endif %}
 {% if errors %}
     <p class="errornote">
     {% if errors|length == 1 %}{% trans "Please correct the error below." %}{% else %}{% trans "Please correct the errors below." %}{% endif %}
@@ -69,24 +71,7 @@
 {% block after_related_objects %}{% endblock %}
 
 {% block submit_buttons_bottom %}
-
-{% comment %}
-	{% if request.GET.m == "fs" %}
-	<div style="z-index:100000;position:fixed;top:0.4em;right:0.5em">
-		<input type="submit" style="padding:0.3em 0.5em 0.2em 0.5em !important" name="_inline_" value="{% trans 'Save' %}" />
-	</div>
-	{% endif %}
-	{% if editor == "codemirror" and request.GET.m == "fs" %}
-	<div style="z-index:100000;position:fixed;top:0.9em;right:7.8em">
-		<a class="toolbar-btn" href="javascript:elmirror.setOption('fullScreen', false)">{% trans 'Close' %}</a>
-	</div>
-	{% endif %}
 	{% submit_row %}
-	<div style="float:right;">
-		<input type="submit" name="_inline_" class="default" value="{% trans 'Save and view page' %}" />
-	</div>
-{% endcomment %}
-
 {% endblock %}
 
 {% block admin_change_form_document_ready %}
@@ -98,6 +83,8 @@
             {% endif %}>
     </script>
     <script type="text/javascript">
+    	var btn = '<input type="submit" name="_inline_" class="default" value="{% trans 'Save and view page' %}" />';
+    	django.jQuery(".submit-row").append(btn);
 		{% if editor == "codemirror" %}
 			document.onkeydown = function(evt) {
 			    evt = evt || window.event;
